--- a/src/main/resources/json/config.json
+++ b/src/main/resources/json/config.json
@@ -1,418 +1,88 @@
 {
     "DATACENTERS": [
-{
-        "name": "Node1",
-        "SCHEDULING_INTERVAL": -1,
-        "hosts": 2,
-        "host_spec": {
-            "HOST_PES": 16,
-            "HOST_MIPS": 38400,
-            "HOST_RAM": 32768,
-            "HOST_BW": 1024,
-            "HOST_STORAGE": 1000000
+        {
+            "name": "Node1",
+            "SCHEDULING_INTERVAL": 1,
+            "hosts": 1,
+            "host_spec": {
+                "HOST_PES": 128,
+                "HOST_MIPS": 2400000,
+                "HOST_RAM": 1310720,
+                "HOST_BW": 10000000,
+                "HOST_STORAGE": 1000000000000,
+                "HOST_START_UP_DELAY": 5,
+                "HOST_SHUT_DOWN_DELAY": 0,
+                "HOST_START_UP_POWER": 10,
+                "HOST_SHUT_DOWN_POWER": 5
+            },
+            "VmAllocationPolicy": "BF",
+            "VmScheduler": "TS",
+            "UtilizationModel": "D",
+            "vm": 120,
+            "cloudlets": 29,
+            "cloudlet_spec": {
+                "CLOUDLET_LENGTH": 10000000,
+                "CLOUDLET_PES": 4,
+                "FILE_SIZE": 1470000,
+                "OUTPUT_SIZE": 1470000
+            },
+            "power_spec_path": "src/main/resources/power_spec/default_power_spec.txt"
         },
-        "VmAllocationPolicy": "SP",
-        "VmScheduler": "SS",
-        "UtilizationModel": "F",
-        "vm": 4,
-        "cloudlets": 2,
-        "cloudlet_spec": {
-            "CLOUDLET_LENGTH": 1000,
-            "CLOUDLET_PES": 4,
-            "FILE_SIZE": 1000,
-            "OUTPUT_SIZE": 1024
+        {
+            "name": "Node2",
+            "SCHEDULING_INTERVAL": 1,
+            "hosts": 1,
+            "host_spec": {
+                "HOST_PES": 128,
+                "HOST_MIPS": 2400000,
+                "HOST_RAM": 1310720,
+                "HOST_BW": 10000000,
+                "HOST_STORAGE": 1000000000000,
+                "HOST_START_UP_DELAY": 5,
+                "HOST_SHUT_DOWN_DELAY": 0,
+                "HOST_START_UP_POWER": 10,
+                "HOST_SHUT_DOWN_POWER": 5
+            },
+            "VmAllocationPolicy": "BF",
+            "VmScheduler": "TS",
+            "UtilizationModel": "D",
+            "vm": 120,
+            "cloudlets": 29,
+            "cloudlet_spec": {
+                "CLOUDLET_LENGTH": 10000000,
+                "CLOUDLET_PES": 4,
+                "FILE_SIZE": 1470000,
+                "OUTPUT_SIZE": 1470000
+            },
+            "power_spec_path": "src/main/resources/power_spec/default_power_spec.txt"
         },
-        "power_spec": {
-            "HOST_START_UP_DELAY": 5,
-            "HOST_SHUT_DOWN_DELAY": 3,
-            "HOST_START_UP_POWER": 5,
-            "HOST_SHUT_DOWN_POWER": 3,
-            "STATIC_POWER": 75.0,
-            "MAX_POWER": 850.0
+        {
+            "name": "Node3",
+            "SCHEDULING_INTERVAL": 1,
+            "hosts": 9,
+            "host_spec": {
+                "HOST_PES": 128,
+                "HOST_MIPS": 2400000,
+                "HOST_RAM": 1310720,
+                "HOST_BW": 10000000,
+                "HOST_STORAGE": 1000000000000,
+                "HOST_START_UP_DELAY": 5,
+                "HOST_SHUT_DOWN_DELAY": 0,
+                "HOST_START_UP_POWER": 10,
+                "HOST_SHUT_DOWN_POWER": 5
+            },
+            "VmAllocationPolicy": "BF",
+            "VmScheduler": "TS",
+            "UtilizationModel": "D",
+            "vm": 120,
+            "cloudlets": 29,
+            "cloudlet_spec": {
+                "CLOUDLET_LENGTH": 10000000,
+                "CLOUDLET_PES": 4,
+                "FILE_SIZE": 1470000,
+                "OUTPUT_SIZE": 1470000
+            },
+            "power_spec_path": "src/main/resources/power_spec/default_power_spec.txt"
         }
-    }
-,
-{
-        "name": "Node2",
-        "SCHEDULING_INTERVAL": -1,
-        "hosts": 2,
-        "host_spec": {
-            "HOST_PES": 16,
-            "HOST_MIPS": 38400,
-            "HOST_RAM": 32768,
-            "HOST_BW": 1024,
-            "HOST_STORAGE": 1000000
-        },
-        "VmAllocationPolicy": "SP",
-        "VmScheduler": "SS",
-        "UtilizationModel": "F",
-        "vm": 4,
-        "cloudlets": 2,
-        "cloudlet_spec": {
-            "CLOUDLET_LENGTH": 1000,
-            "CLOUDLET_PES": 4,
-            "FILE_SIZE": 1000,
-            "OUTPUT_SIZE": 1024
-        },
-        "power_spec": {
-            "HOST_START_UP_DELAY": 5,
-            "HOST_SHUT_DOWN_DELAY": 3,
-            "HOST_START_UP_POWER": 5,
-            "HOST_SHUT_DOWN_POWER": 3,
-            "STATIC_POWER": 75.0,
-            "MAX_POWER": 850.0
-        }
-    }
-,
-{
-        "name": "Node3",
-        "SCHEDULING_INTERVAL": -1,
-        "hosts": 2,
-        "host_spec": {
-            "HOST_PES": 16,
-            "HOST_MIPS": 38400,
-            "HOST_RAM": 32768,
-            "HOST_BW": 1024,
-            "HOST_STORAGE": 1000000
-        },
-        "VmAllocationPolicy": "SP",
-        "VmScheduler": "SS",
-        "UtilizationModel": "F",
-        "vm": 4,
-        "cloudlets": 2,
-        "cloudlet_spec": {
-            "CLOUDLET_LENGTH": 1000,
-            "CLOUDLET_PES": 4,
-            "FILE_SIZE": 1000,
-            "OUTPUT_SIZE": 1024
-        },
-        "power_spec": {
-            "HOST_START_UP_DELAY": 5,
-            "HOST_SHUT_DOWN_DELAY": 3,
-            "HOST_START_UP_POWER": 5,
-            "HOST_SHUT_DOWN_POWER": 3,
-            "STATIC_POWER": 75.0,
-            "MAX_POWER": 850.0
-        }
-    }
-,
-{
-        "name": "Node4",
-        "SCHEDULING_INTERVAL": -1,
-        "hosts": 2,
-        "host_spec": {
-            "HOST_PES": 16,
-            "HOST_MIPS": 38400,
-            "HOST_RAM": 32768,
-            "HOST_BW": 1024,
-            "HOST_STORAGE": 1000000
-        },
-        "VmAllocationPolicy": "SP",
-        "VmScheduler": "SS",
-        "UtilizationModel": "F",
-        "vm": 4,
-        "cloudlets": 2,
-        "cloudlet_spec": {
-            "CLOUDLET_LENGTH": 1000,
-            "CLOUDLET_PES": 4,
-            "FILE_SIZE": 1000,
-            "OUTPUT_SIZE": 1024
-        },
-        "power_spec": {
-            "HOST_START_UP_DELAY": 5,
-            "HOST_SHUT_DOWN_DELAY": 3,
-            "HOST_START_UP_POWER": 5,
-            "HOST_SHUT_DOWN_POWER": 3,
-            "STATIC_POWER": 75.0,
-            "MAX_POWER": 850.0
-        }
-    }
-,
-{
-        "name": "Node5",
-        "SCHEDULING_INTERVAL": -1,
-        "hosts": 2,
-        "host_spec": {
-            "HOST_PES": 16,
-            "HOST_MIPS": 38400,
-            "HOST_RAM": 32768,
-            "HOST_BW": 1024,
-            "HOST_STORAGE": 1000000
-        },
-        "VmAllocationPolicy": "SP",
-        "VmScheduler": "SS",
-        "UtilizationModel": "F",
-        "vm": 4,
-        "cloudlets": 2,
-        "cloudlet_spec": {
-            "CLOUDLET_LENGTH": 1000,
-            "CLOUDLET_PES": 4,
-            "FILE_SIZE": 1000,
-            "OUTPUT_SIZE": 1024
-        },
-        "power_spec": {
-            "HOST_START_UP_DELAY": 5,
-            "HOST_SHUT_DOWN_DELAY": 3,
-            "HOST_START_UP_POWER": 5,
-            "HOST_SHUT_DOWN_POWER": 3,
-            "STATIC_POWER": 75.0,
-            "MAX_POWER": 850.0
-        }
-    }
-,
-{
-        "name": "Node6",
-        "SCHEDULING_INTERVAL": -1,
-        "hosts": 2,
-        "host_spec": {
-            "HOST_PES": 16,
-            "HOST_MIPS": 38400,
-            "HOST_RAM": 32768,
-            "HOST_BW": 1024,
-            "HOST_STORAGE": 1000000
-        },
-        "VmAllocationPolicy": "SP",
-        "VmScheduler": "SS",
-        "UtilizationModel": "F",
-        "vm": 4,
-        "cloudlets": 2,
-        "cloudlet_spec": {
-            "CLOUDLET_LENGTH": 1000,
-            "CLOUDLET_PES": 4,
-            "FILE_SIZE": 1000,
-            "OUTPUT_SIZE": 1024
-        },
-        "power_spec": {
-            "HOST_START_UP_DELAY": 5,
-            "HOST_SHUT_DOWN_DELAY": 3,
-            "HOST_START_UP_POWER": 5,
-            "HOST_SHUT_DOWN_POWER": 3,
-            "STATIC_POWER": 75.0,
-            "MAX_POWER": 850.0
-        }
-    }
-,
-{
-        "name": "Node7",
-        "SCHEDULING_INTERVAL": -1,
-        "hosts": 2,
-        "host_spec": {
-            "HOST_PES": 16,
-            "HOST_MIPS": 38400,
-            "HOST_RAM": 32768,
-            "HOST_BW": 1024,
-            "HOST_STORAGE": 1000000
-        },
-        "VmAllocationPolicy": "SP",
-        "VmScheduler": "SS",
-        "UtilizationModel": "F",
-        "vm": 4,
-        "cloudlets": 2,
-        "cloudlet_spec": {
-            "CLOUDLET_LENGTH": 1000,
-            "CLOUDLET_PES": 4,
-            "FILE_SIZE": 1000,
-            "OUTPUT_SIZE": 1024
-        },
-        "power_spec": {
-            "HOST_START_UP_DELAY": 5,
-            "HOST_SHUT_DOWN_DELAY": 3,
-            "HOST_START_UP_POWER": 5,
-            "HOST_SHUT_DOWN_POWER": 3,
-            "STATIC_POWER": 75.0,
-            "MAX_POWER": 850.0
-        }
-    }
-,
-{
-        "name": "Node8",
-        "SCHEDULING_INTERVAL": -1,
-        "hosts": 2,
-        "host_spec": {
-            "HOST_PES": 16,
-            "HOST_MIPS": 38400,
-            "HOST_RAM": 32768,
-            "HOST_BW": 1024,
-            "HOST_STORAGE": 1000000
-        },
-        "VmAllocationPolicy": "SP",
-        "VmScheduler": "SS",
-        "UtilizationModel": "F",
-        "vm": 4,
-        "cloudlets": 2,
-        "cloudlet_spec": {
-            "CLOUDLET_LENGTH": 1000,
-            "CLOUDLET_PES": 4,
-            "FILE_SIZE": 1000,
-            "OUTPUT_SIZE": 1024
-        },
-        "power_spec": {
-            "HOST_START_UP_DELAY": 5,
-            "HOST_SHUT_DOWN_DELAY": 3,
-            "HOST_START_UP_POWER": 5,
-            "HOST_SHUT_DOWN_POWER": 3,
-            "STATIC_POWER": 75.0,
-            "MAX_POWER": 850.0
-        }
-    }
-,
-{
-        "name": "Node9",
-        "SCHEDULING_INTERVAL": -1,
-        "hosts": 2,
-        "host_spec": {
-            "HOST_PES": 16,
-            "HOST_MIPS": 38400,
-            "HOST_RAM": 32768,
-            "HOST_BW": 1024,
-            "HOST_STORAGE": 1000000
-        },
-        "VmAllocationPolicy": "SP",
-        "VmScheduler": "SS",
-        "UtilizationModel": "F",
-        "vm": 4,
-        "cloudlets": 2,
-        "cloudlet_spec": {
-            "CLOUDLET_LENGTH": 1000,
-            "CLOUDLET_PES": 4,
-            "FILE_SIZE": 1000,
-            "OUTPUT_SIZE": 1024
-        },
-        "power_spec": {
-            "HOST_START_UP_DELAY": 5,
-            "HOST_SHUT_DOWN_DELAY": 3,
-            "HOST_START_UP_POWER": 5,
-            "HOST_SHUT_DOWN_POWER": 3,
-            "STATIC_POWER": 75.0,
-            "MAX_POWER": 850.0
-        }
-    }
-,
-{
-        "name": "Node10",
-        "SCHEDULING_INTERVAL": -1,
-        "hosts": 2,
-        "host_spec": {
-            "HOST_PES": 16,
-            "HOST_MIPS": 38400,
-            "HOST_RAM": 32768,
-            "HOST_BW": 1024,
-            "HOST_STORAGE": 1000000
-        },
-        "VmAllocationPolicy": "SP",
-        "VmScheduler": "SS",
-        "UtilizationModel": "F",
-        "vm": 4,
-        "cloudlets": 2,
-        "cloudlet_spec": {
-            "CLOUDLET_LENGTH": 1000,
-            "CLOUDLET_PES": 4,
-            "FILE_SIZE": 1000,
-            "OUTPUT_SIZE": 1024
-        },
-        "power_spec": {
-            "HOST_START_UP_DELAY": 5,
-            "HOST_SHUT_DOWN_DELAY": 3,
-            "HOST_START_UP_POWER": 5,
-            "HOST_SHUT_DOWN_POWER": 3,
-            "STATIC_POWER": 75.0,
-            "MAX_POWER": 850.0
-        }
-    }
-,
-{
-        "name": "Node11",
-        "SCHEDULING_INTERVAL": -1,
-        "hosts": 2,
-        "host_spec": {
-            "HOST_PES": 16,
-            "HOST_MIPS": 38400,
-            "HOST_RAM": 32768,
-            "HOST_BW": 1024,
-            "HOST_STORAGE": 1000000
-        },
-        "VmAllocationPolicy": "SP",
-        "VmScheduler": "SS",
-        "UtilizationModel": "F",
-        "vm": 4,
-        "cloudlets": 2,
-        "cloudlet_spec": {
-            "CLOUDLET_LENGTH": 1000,
-            "CLOUDLET_PES": 4,
-            "FILE_SIZE": 1000,
-            "OUTPUT_SIZE": 1024
-        },
-        "power_spec": {
-            "HOST_START_UP_DELAY": 5,
-            "HOST_SHUT_DOWN_DELAY": 3,
-            "HOST_START_UP_POWER": 5,
-            "HOST_SHUT_DOWN_POWER": 3,
-            "STATIC_POWER": 75.0,
-            "MAX_POWER": 850.0
-        }
-    }
-,
-{
-        "name": "Node12",
-        "SCHEDULING_INTERVAL": -1,
-        "hosts": 2,
-        "host_spec": {
-            "HOST_PES": 16,
-            "HOST_MIPS": 38400,
-            "HOST_RAM": 32768,
-            "HOST_BW": 1024,
-            "HOST_STORAGE": 1000000
-        },
-        "VmAllocationPolicy": "SP",
-        "VmScheduler": "SS",
-        "UtilizationModel": "F",
-        "vm": 4,
-        "cloudlets": 2,
-        "cloudlet_spec": {
-            "CLOUDLET_LENGTH": 1000,
-            "CLOUDLET_PES": 4,
-            "FILE_SIZE": 1000,
-            "OUTPUT_SIZE": 1024
-        },
-        "power_spec": {
-            "HOST_START_UP_DELAY": 5,
-            "HOST_SHUT_DOWN_DELAY": 3,
-            "HOST_START_UP_POWER": 5,
-            "HOST_SHUT_DOWN_POWER": 3,
-            "STATIC_POWER": 75.0,
-            "MAX_POWER": 850.0
-        }
-    }
-,
-{
-        "name": "Node13",
-        "SCHEDULING_INTERVAL": -1,
-        "hosts": 2,
-        "host_spec": {
-            "HOST_PES": 16,
-            "HOST_MIPS": 38400,
-            "HOST_RAM": 32768,
-            "HOST_BW": 1024,
-            "HOST_STORAGE": 1000000
-        },
-        "VmAllocationPolicy": "SP",
-        "VmScheduler": "SS",
-        "UtilizationModel": "F",
-        "vm": 4,
-        "cloudlets": 2,
-        "cloudlet_spec": {
-            "CLOUDLET_LENGTH": 1000,
-            "CLOUDLET_PES": 4,
-            "FILE_SIZE": 1000,
-            "OUTPUT_SIZE": 1024
-        },
-        "power_spec": {
-            "HOST_START_UP_DELAY": 5,
-            "HOST_SHUT_DOWN_DELAY": 3,
-            "HOST_START_UP_POWER": 5,
-            "HOST_SHUT_DOWN_POWER": 3,
-            "STATIC_POWER": 75.0,
-            "MAX_POWER": 850.0
-        }
-    }
-]}
+    ]
+}
