--- a/src/main/resources/json/config1.json
+++ b/src/main/resources/json/config1.json
@@ -6,30 +6,28 @@
             "hosts": 1,
             "host_spec": {
                 "HOST_PES": 128,
-                "HOST_MIPS": 2000000,
-                "HOST_RAM": 131072,
-                "HOST_BW": 500000000,
-                "HOST_STORAGE": 250000000000
+                "HOST_MIPS": 2400000,
+                "HOST_RAM": 1310720,
+                "HOST_BW": 10000000,
+                "HOST_STORAGE": 1000000000000,
+                "HOST_START_UP_DELAY": 5,
+                "HOST_SHUT_DOWN_DELAY": 0,
+                "HOST_START_UP_POWER": 10,
+                "HOST_SHUT_DOWN_POWER": 5
             },
             "VmAllocationPolicy": "BF",
             "VmScheduler": "TS",
-            "UtilizationModel": "F",
-            "vm": 1,
-            "cloudlets": 10,
+            "UtilizationModel": "D",
+            "vm": 120,
+            "cloudlets": 29,
+            "lastCloudlets": 290,
             "cloudlet_spec": {
-                "CLOUDLET_LENGTH": 1000,
+                "CLOUDLET_LENGTH": 10000000,
                 "CLOUDLET_PES": 4,
-                "FILE_SIZE": 1024,
-                "OUTPUT_SIZE": 1024
+                "FILE_SIZE": 1470000,
+                "OUTPUT_SIZE": 1470000
             },
-            "power_spec": {
-                "HOST_START_UP_DELAY": 0.0,
-                "HOST_SHUT_DOWN_DELAY": 0.0,
-                "HOST_START_UP_POWER": 4.5,
-                "HOST_SHUT_DOWN_POWER": 2.5,
-                "STATIC_POWER": 75.0,
-                "MAX_POWER": 850.0
-            }
+            "power_spec_path": "src/main/resources/power_spec/default_power_spec.txt"
         },
         {
             "name": "Node2",
@@ -37,30 +35,28 @@
             "hosts": 1,
             "host_spec": {
                 "HOST_PES": 128,
-                "HOST_MIPS": 2000000,
-                "HOST_RAM": 131072,
-                "HOST_BW": 500000000,
-                "HOST_STORAGE": 250000000000
+                "HOST_MIPS": 2400000,
+                "HOST_RAM": 1310720,
+                "HOST_BW": 10000000,
+                "HOST_STORAGE": 1000000000000,
+                "HOST_START_UP_DELAY": 5,
+                "HOST_SHUT_DOWN_DELAY": 0,
+                "HOST_START_UP_POWER": 10,
+                "HOST_SHUT_DOWN_POWER": 5
             },
-            "vm": 1,
             "VmAllocationPolicy": "BF",
             "VmScheduler": "TS",
-            "UtilizationModel": "F",
-            "cloudlets": 20,
+            "UtilizationModel": "D",
+            "vm": 120,
+            "cloudlets": 29,
+            "lastCloudlets": 290,
             "cloudlet_spec": {
-                "CLOUDLET_LENGTH": 1000,
+                "CLOUDLET_LENGTH": 10000000,
                 "CLOUDLET_PES": 4,
-                "FILE_SIZE": 1024,
-                "OUTPUT_SIZE": 1024
+                "FILE_SIZE": 1470000,
+                "OUTPUT_SIZE": 1470000
             },
-            "power_spec": {
-                "HOST_START_UP_DELAY": 0.0,
-                "HOST_SHUT_DOWN_DELAY": 0.0,
-                "HOST_START_UP_POWER": 4.5,
-                "HOST_SHUT_DOWN_POWER": 2.5,
-                "STATIC_POWER": 75.0,
-                "MAX_POWER": 850.0
-            }
+            "power_spec_path": "src/main/resources/power_spec/default_power_spec.txt"
         },
         {
             "name": "Node3",
@@ -68,30 +64,28 @@
             "hosts": 1,
             "host_spec": {
                 "HOST_PES": 128,
-                "HOST_MIPS": 2000000,
-                "HOST_RAM": 131072,
-                "HOST_BW": 500000000,
-                "HOST_STORAGE": 250000000000
+                "HOST_MIPS": 2400000,
+                "HOST_RAM": 1310720,
+                "HOST_BW": 10000000,
+                "HOST_STORAGE": 1000000000000,
+                "HOST_START_UP_DELAY": 5,
+                "HOST_SHUT_DOWN_DELAY": 0,
+                "HOST_START_UP_POWER": 10,
+                "HOST_SHUT_DOWN_POWER": 5
             },
-            "vm": 1,
             "VmAllocationPolicy": "BF",
             "VmScheduler": "TS",
-            "UtilizationModel": "F",
-            "cloudlets": 30,
+            "UtilizationModel": "D",
+            "vm": 120,
+            "cloudlets": 29,
+            "lastCloudlets": 290,
             "cloudlet_spec": {
-                "CLOUDLET_LENGTH": 1000,
+                "CLOUDLET_LENGTH": 10000000,
                 "CLOUDLET_PES": 4,
-                "FILE_SIZE": 1024,
-                "OUTPUT_SIZE": 1024
+                "FILE_SIZE": 1470000,
+                "OUTPUT_SIZE": 1470000
             },
-            "power_spec": {
-                "HOST_START_UP_DELAY": 0.0,
-                "HOST_SHUT_DOWN_DELAY": 0.0,
-                "HOST_START_UP_POWER": 4.5,
-                "HOST_SHUT_DOWN_POWER": 2.5,
-                "STATIC_POWER": 75.0,
-                "MAX_POWER": 850.0
-            }
+            "power_spec_path": "src/main/resources/power_spec/default_power_spec.txt"
         },
         {
             "name": "Node4",
@@ -99,30 +93,28 @@
             "hosts": 1,
             "host_spec": {
                 "HOST_PES": 128,
-                "HOST_MIPS": 2000000,
-                "HOST_RAM": 131072,
-                "HOST_BW": 500000000,
-                "HOST_STORAGE": 250000000000
+                "HOST_MIPS": 2400000,
+                "HOST_RAM": 1310720,
+                "HOST_BW": 10000000,
+                "HOST_STORAGE": 1000000000000,
+                "HOST_START_UP_DELAY": 5,
+                "HOST_SHUT_DOWN_DELAY": 0,
+                "HOST_START_UP_POWER": 10,
+                "HOST_SHUT_DOWN_POWER": 5
             },
-            "vm": 1,
             "VmAllocationPolicy": "BF",
             "VmScheduler": "TS",
-            "UtilizationModel": "F",
-            "cloudlets": 40,
+            "UtilizationModel": "D",
+            "vm": 120,
+            "cloudlets": 29,
+            "lastCloudlets": 290,
             "cloudlet_spec": {
-                "CLOUDLET_LENGTH": 1000,
+                "CLOUDLET_LENGTH": 10000000,
                 "CLOUDLET_PES": 4,
-                "FILE_SIZE": 1024,
-                "OUTPUT_SIZE": 1024
+                "FILE_SIZE": 1470000,
+                "OUTPUT_SIZE": 1470000
             },
-            "power_spec": {
-                "HOST_START_UP_DELAY": 0.0,
-                "HOST_SHUT_DOWN_DELAY": 0.0,
-                "HOST_START_UP_POWER": 4.5,
-                "HOST_SHUT_DOWN_POWER": 2.5,
-                "STATIC_POWER": 75.0,
-                "MAX_POWER": 850.0
-            }
+            "power_spec_path": "src/main/resources/power_spec/default_power_spec.txt"
         },
         {
             "name": "Node5",
@@ -130,278 +122,28 @@
             "hosts": 1,
             "host_spec": {
                 "HOST_PES": 128,
-                "HOST_MIPS": 2000000,
-                "HOST_RAM": 131072,
-                "HOST_BW": 500000000,
-                "HOST_STORAGE": 250000000000
+                "HOST_MIPS": 2400000,
+                "HOST_RAM": 1310720,
+                "HOST_BW": 10000000,
+                "HOST_STORAGE": 1000000000000,
+                "HOST_START_UP_DELAY": 5,
+                "HOST_SHUT_DOWN_DELAY": 0,
+                "HOST_START_UP_POWER": 10,
+                "HOST_SHUT_DOWN_POWER": 5
             },
-            "vm": 1,
             "VmAllocationPolicy": "BF",
             "VmScheduler": "TS",
-            "UtilizationModel": "F",
-            "cloudlets": 50,
+            "UtilizationModel": "D",
+            "vm": 120,
+            "cloudlets": 29,
+            "lastCloudlets": 290,
             "cloudlet_spec": {
-                "CLOUDLET_LENGTH": 1000,
+                "CLOUDLET_LENGTH": 10000000,
                 "CLOUDLET_PES": 4,
-                "FILE_SIZE": 1024,
-                "OUTPUT_SIZE": 1024
+                "FILE_SIZE": 1470000,
+                "OUTPUT_SIZE": 1470000
             },
-            "power_spec": {
-                "HOST_START_UP_DELAY": 0.0,
-                "HOST_SHUT_DOWN_DELAY": 0.0,
-                "HOST_START_UP_POWER": 4.5,
-                "HOST_SHUT_DOWN_POWER": 2.5,
-                "STATIC_POWER": 75.0,
-                "MAX_POWER": 850.0
-            }
-        },
-        {
-            "name": "Node6",
-            "SCHEDULING_INTERVAL": 1,
-            "hosts": 1,
-            "host_spec": {
-                "HOST_PES": 128,
-                "HOST_MIPS": 2000000,
-                "HOST_RAM": 131072,
-                "HOST_BW": 500000000,
-                "HOST_STORAGE": 250000000000
-            },
-            "vm": 1,
-            "VmAllocationPolicy": "BF",
-            "VmScheduler": "TS",
-            "UtilizationModel": "F",
-            "cloudlets": 60,
-            "cloudlet_spec": {
-                "CLOUDLET_LENGTH": 1000,
-                "CLOUDLET_PES": 4,
-                "FILE_SIZE": 1024,
-                "OUTPUT_SIZE": 1024
-            },
-            "power_spec": {
-                "HOST_START_UP_DELAY": 0.0,
-                "HOST_SHUT_DOWN_DELAY": 0.0,
-                "HOST_START_UP_POWER": 4.5,
-                "HOST_SHUT_DOWN_POWER": 2.5,
-                "STATIC_POWER": 75.0,
-                "MAX_POWER": 850.0
-            }
-        },
-        {
-            "name": "Node7",
-            "SCHEDULING_INTERVAL": 1,
-            "hosts": 1,
-            "host_spec": {
-                "HOST_PES": 128,
-                "HOST_MIPS": 2000000,
-                "HOST_RAM": 131072,
-                "HOST_BW": 500000000,
-                "HOST_STORAGE": 250000000000
-            },
-            "vm": 1,
-            "VmAllocationPolicy": "BF",
-            "VmScheduler": "TS",
-            "UtilizationModel": "F",
-            "cloudlets": 70,
-            "cloudlet_spec": {
-                "CLOUDLET_LENGTH": 1000,
-                "CLOUDLET_PES": 4,
-                "FILE_SIZE": 1024,
-                "OUTPUT_SIZE": 1024
-            },
-            "power_spec": {
-                "HOST_START_UP_DELAY": 0.0,
-                "HOST_SHUT_DOWN_DELAY": 0.0,
-                "HOST_START_UP_POWER": 4.5,
-                "HOST_SHUT_DOWN_POWER": 2.5,
-                "STATIC_POWER": 75.0,
-                "MAX_POWER": 850.0
-            }
-        },
-        {
-            "name": "Node8",
-            "SCHEDULING_INTERVAL": 1,
-            "hosts": 1,
-            "host_spec": {
-                "HOST_PES": 128,
-                "HOST_MIPS": 2000000,
-                "HOST_RAM": 131072,
-                "HOST_BW": 500000000,
-                "HOST_STORAGE": 250000000000
-            },
-            "vm": 1,
-            "VmAllocationPolicy": "BF",
-            "VmScheduler": "TS",
-            "UtilizationModel": "F",
-            "cloudlets": 80,
-            "cloudlet_spec": {
-                "CLOUDLET_LENGTH": 1000,
-                "CLOUDLET_PES": 4,
-                "FILE_SIZE": 1024,
-                "OUTPUT_SIZE": 1024
-            },
-            "power_spec": {
-                "HOST_START_UP_DELAY": 0.0,
-                "HOST_SHUT_DOWN_DELAY": 0.0,
-                "HOST_START_UP_POWER": 4.5,
-                "HOST_SHUT_DOWN_POWER": 2.5,
-                "STATIC_POWER": 75.0,
-                "MAX_POWER": 850.0
-            }
-        },
-        {
-            "name": "Node9",
-            "SCHEDULING_INTERVAL": 1,
-            "hosts": 1,
-            "host_spec": {
-                "HOST_PES": 128,
-                "HOST_MIPS": 2000000,
-                "HOST_RAM": 131072,
-                "HOST_BW": 500000000,
-                "HOST_STORAGE": 250000000000
-            },
-            "vm": 1,
-            "VmAllocationPolicy": "BF",
-            "VmScheduler": "TS",
-            "UtilizationModel": "F",
-            "cloudlets": 90,
-            "cloudlet_spec": {
-                "CLOUDLET_LENGTH": 1000,
-                "CLOUDLET_PES": 4,
-                "FILE_SIZE": 1024,
-                "OUTPUT_SIZE": 1024
-            },
-            "power_spec": {
-                "HOST_START_UP_DELAY": 0.0,
-                "HOST_SHUT_DOWN_DELAY": 0.0,
-                "HOST_START_UP_POWER": 4.5,
-                "HOST_SHUT_DOWN_POWER": 2.5,
-                "STATIC_POWER": 75.0,
-                "MAX_POWER": 850.0
-            }
-        },
-        {
-            "name": "Node10",
-            "SCHEDULING_INTERVAL": 1,
-            "hosts": 1,
-            "host_spec": {
-                "HOST_PES": 128,
-                "HOST_MIPS": 2000000,
-                "HOST_RAM": 131072,
-                "HOST_BW": 500000000,
-                "HOST_STORAGE": 250000000000
-            },
-            "vm": 1,
-            "VmAllocationPolicy": "BF",
-            "VmScheduler": "TS",
-            "UtilizationModel": "F",
-            "cloudlets": 100,
-            "cloudlet_spec": {
-                "CLOUDLET_LENGTH": 1000,
-                "CLOUDLET_PES": 4,
-                "FILE_SIZE": 1024,
-                "OUTPUT_SIZE": 1024
-            },
-            "power_spec": {
-                "HOST_START_UP_DELAY": 0.0,
-                "HOST_SHUT_DOWN_DELAY": 0.0,
-                "HOST_START_UP_POWER": 4.5,
-                "HOST_SHUT_DOWN_POWER": 2.5,
-                "STATIC_POWER": 75.0,
-                "MAX_POWER": 850.0
-            }
-        },
-        {
-            "name": "Node11",
-            "SCHEDULING_INTERVAL": 1,
-            "hosts": 1,
-            "host_spec": {
-                "HOST_PES": 128,
-                "HOST_MIPS": 2000000,
-                "HOST_RAM": 131072,
-                "HOST_BW": 500000000,
-                "HOST_STORAGE": 250000000000
-            },
-            "vm": 1,
-            "VmAllocationPolicy": "BF",
-            "VmScheduler": "TS",
-            "UtilizationModel": "F",
-            "cloudlets": 110,
-            "cloudlet_spec": {
-                "CLOUDLET_LENGTH": 1000,
-                "CLOUDLET_PES": 4,
-                "FILE_SIZE": 1024,
-                "OUTPUT_SIZE": 1024
-            },
-            "power_spec": {
-                "HOST_START_UP_DELAY": 0.0,
-                "HOST_SHUT_DOWN_DELAY": 0.0,
-                "HOST_START_UP_POWER": 4.5,
-                "HOST_SHUT_DOWN_POWER": 2.5,
-                "STATIC_POWER": 75.0,
-                "MAX_POWER": 850.0
-            }
-        },
-        {
-            "name": "Node12",
-            "SCHEDULING_INTERVAL": 1,
-            "hosts": 1,
-            "host_spec": {
-                "HOST_PES": 128,
-                "HOST_MIPS": 2000000,
-                "HOST_RAM": 131072,
-                "HOST_BW": 500000000,
-                "HOST_STORAGE": 250000000000
-            },
-            "vm": 1,
-            "VmAllocationPolicy": "BF",
-            "VmScheduler": "TS",
-            "UtilizationModel": "F",
-            "cloudlets": 120,
-            "cloudlet_spec": {
-                "CLOUDLET_LENGTH": 1000,
-                "CLOUDLET_PES": 4,
-                "FILE_SIZE": 1024,
-                "OUTPUT_SIZE": 1024
-            },
-            "power_spec": {
-                "HOST_START_UP_DELAY": 0.0,
-                "HOST_SHUT_DOWN_DELAY": 0.0,
-                "HOST_START_UP_POWER": 4.5,
-                "HOST_SHUT_DOWN_POWER": 2.5,
-                "STATIC_POWER": 75.0,
-                "MAX_POWER": 850.0
-            }
-        },
-        {
-            "name": "Node13",
-            "SCHEDULING_INTERVAL": 1,
-            "hosts": 1,
-            "host_spec": {
-                "HOST_PES": 128,
-                "HOST_MIPS": 2000000,
-                "HOST_RAM": 131072,
-                "HOST_BW": 500000000,
-                "HOST_STORAGE": 250000000000
-            },
-            "vm": 1,
-            "VmAllocationPolicy": "BF",
-            "VmScheduler": "TS",
-            "UtilizationModel": "F",
-            "cloudlets": 130,
-            "cloudlet_spec": {
-                "CLOUDLET_LENGTH": 1000,
-                "CLOUDLET_PES": 4,
-                "FILE_SIZE": 1024,
-                "OUTPUT_SIZE": 1024
-            },
-            "power_spec": {
-                "HOST_START_UP_DELAY": 0.0,
-                "HOST_SHUT_DOWN_DELAY": 0.0,
-                "HOST_START_UP_POWER": 4.5,
-                "HOST_SHUT_DOWN_POWER": 2.5,
-                "STATIC_POWER": 75.0,
-                "MAX_POWER": 850.0
-            }
+            "power_spec_path": "src/main/resources/power_spec/default_power_spec.txt"
         }
     ]
 }
